k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devpocket-prod
  labels:
    name: devpocket-prod
    environment: production
